5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1593_1804.log
== TEST (2019-03-23 11:04:48) 
-- CODE:
# Coordenadas de A (xa, ya):
xa = float(input(" Digite a coordenada xa: "))
ya = float(input(" Digite a coordenada ya: "))

# Coordenadas de B (xb, yb):
xb = float(input(" Digite a coordenada xb: "))
yb = float(input(" Digite a coordenada yb: "))

from math import distancia entre pontos

-- ERROR:
File "XXXX", line 9
    from math import distancia entre pontos
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:08:12) 
-- CODE:
# Coordenadas de A (xa, ya):
xa = float(input(" Digite a coordenada xa: "))
ya = float(input(" Digite a coordenada ya: "))

# Coordenadas de B (xb, yb):
xb = float(input(" Digite a coordenada xb: "))
yb = float(input(" Digite a coordenada yb: "))

# Distancia entre A e B (dab):
from math import sqrt
dab = sqrt (xb - xa)** 2 + (yb - ya)** 2
print(round(dab,3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    dab = sqrt (xb - xa)** 2 + (yb - ya)** 2
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:08:25) 
-- CODE:
# Coordenadas de A (xa, ya):
xa = float(input(" Digite a coordenada xa: "))
ya = float(input(" Digite a coordenada ya: "))

# Coordenadas de B (xb, yb):
xb = float(input(" Digite a coordenada xb: "))
yb = float(input(" Digite a coordenada yb: "))

# Distancia entre A e B (dab):
from math import sqrt
dab = sqrt (xb - xa)** 2 + (yb - ya)** 2
print(round(dab,3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    dab = sqrt (xb - xa)** 2 + (yb - ya)** 2
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 11:08:44) 
-- CODE:
# Coordenadas de A (xa, ya):
xa = float(input(" Digite a coordenada xa: "))
ya = float(input(" Digite a coordenada ya: "))

# Coordenadas de B (xb, yb):
xb = float(input(" Digite a coordenada xb: "))
yb = float(input(" Digite a coordenada yb: "))

# Distancia entre A e B (dab):
from math import sqrt
dab = sqrt (xb - xa)** 2 + (yb - ya)** 2
print(round(dab,3))


-- EXECUTION TIME:
0.141239
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1804/main.py", line 11, in <module>
    dab = sqrt (xb - xa)** 2 + (yb - ya)** 2
ValueError: math domain error

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:09:28) 
-- CODE:
# Coordenadas de A (xa, ya):
xa = float(input(" Digite a coordenada xa: "))
ya = float(input(" Digite a coordenada ya: "))

# Coordenadas de B (xb, yb):
xb = float(input(" Digite a coordenada xb: "))
yb = float(input(" Digite a coordenada yb: "))

# Distancia entre A e B (dab):
from math import sqrt
dab = sqrt ((xb - xa)** 2) + ((yb - ya)** 2)

print(round(dab,3))


-- OUTPUT:
549.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 11:09:38) 
-- CODE:
# Coordenadas de A (xa, ya):
xa = float(input(" Digite a coordenada xa: "))
ya = float(input(" Digite a coordenada ya: "))

# Coordenadas de B (xb, yb):
xb = float(input(" Digite a coordenada xb: "))
yb = float(input(" Digite a coordenada yb: "))

# Distancia entre A e B (dab):
from math import sqrt
dab = sqrt ((xb - xa)** 2) + ((yb - ya)** 2)

print(round(dab,3))


-- EXECUTION TIME:
0.175572
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
549.0
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
3.94
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
7.148
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:10:08) 
-- CODE:
# Coordenadas de A (xa, ya):
xa = int(input(" Digite a coordenada xa: "))
ya = int(input(" Digite a coordenada ya: "))

# Coordenadas de B (xb, yb):
xb = int(input(" Digite a coordenada xb: "))
yb = int(input(" Digite a coordenada yb: "))

# Distancia entre A e B (dab):
from math import sqrt
dab = sqrt ((xb - xa)** 2) + ((yb - ya)** 2)

print(round(dab,3))


-- OUTPUT:
549.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 11:10:12) 
-- CODE:
# Coordenadas de A (xa, ya):
xa = int(input(" Digite a coordenada xa: "))
ya = int(input(" Digite a coordenada ya: "))

# Coordenadas de B (xb, yb):
xb = int(input(" Digite a coordenada xb: "))
yb = int(input(" Digite a coordenada yb: "))

# Distancia entre A e B (dab):
from math import sqrt
dab = sqrt ((xb - xa)** 2) + ((yb - ya)** 2)

print(round(dab,3))


-- EXECUTION TIME:
0.215854
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
549.0
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:

-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 11:10:43) 
-- CODE:
# Coordenadas de A (xa, ya):
xa = int(input(" Digite a coordenada xa: "))
ya = int(input(" Digite a coordenada ya: "))

# Coordenadas de B (xb, yb):
xb = int(input(" Digite a coordenada xb: "))
yb = int(input(" Digite a coordenada yb: "))

# Distancia entre A e B (dab):
from math import sqrt
dab = sqrt ((xb − xa)** 2) + ((yb − ya)** 2)

print(round(dab,3))


-- EXECUTION TIME:
0.188314
-- ERROR:
  File "/home/codebench/codes/1593/1804/main.py", line 11
    dab = sqrt ((xb \u2212 xa)** 2) + ((yb \u2212 ya)** 2)
                    ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:11:36) 
-- CODE:
# Coordenadas de A (xa, ya):
xa = int(input(" Digite a coordenada xa: "))
ya = int(input(" Digite a coordenada ya: "))

# Coordenadas de B (xb, yb):
xb = int(input(" Digite a coordenada xb: "))
yb = int(input(" Digite a coordenada yb: "))

# Distancia entre A e B (dab):
from math import sqrt
dab = sqrt ((xb − xa)** 2) + ((yb − ya)** 2)

print(round(dab,3))


-- ERROR:
File "XXXX", line 11
    dab = sqrt ((xb − xa)** 2) + ((yb − ya)** 2)
                    ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 11:11:59) 
-- CODE:
# Coordenadas de A (xa, ya):
xa = int(input(" Digite a coordenada xa: "))
ya = int(input(" Digite a coordenada ya: "))

# Coordenadas de B (xb, yb):
xb = int(input(" Digite a coordenada xb: "))
yb = int(input(" Digite a coordenada yb: "))

# Distancia entre A e B (dab):
from math import sqrt
dab = sqrt ((xb - xa)** 2) + ((yb - ya)** 2)

print(round(dab,3))


-- EXECUTION TIME:
0.132174
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
549.0
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:

-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:12:30) 
-- CODE:
# Coordenadas de A (xa, ya):
xa = float(input(" Digite a coordenada xa: "))
ya = float(input(" Digite a coordenada ya: "))

# Coordenadas de B (xb, yb):
xb = float(input(" Digite a coordenada xb: "))
yb = float(input(" Digite a coordenada yb: "))

# Distancia entre A e B (dab):
from math import sqrt
dab = sqrt ((xb - xa)** 2) + ((yb - ya)** 2)

print(round(dab,3))


-- OUTPUT:
549.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 11:12:34) 
-- CODE:
# Coordenadas de A (xa, ya):
xa = float(input(" Digite a coordenada xa: "))
ya = float(input(" Digite a coordenada ya: "))

# Coordenadas de B (xb, yb):
xb = float(input(" Digite a coordenada xb: "))
yb = float(input(" Digite a coordenada yb: "))

# Distancia entre A e B (dab):
from math import sqrt
dab = sqrt ((xb - xa)** 2) + ((yb - ya)** 2)

print(round(dab,3))


-- EXECUTION TIME:
0.157066
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
549.0
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
3.94
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
7.148
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:12:36) 
-- CODE:
# Coordenadas de A (xa, ya):
xa = float(input(" Digite a coordenada xa: "))
ya = float(input(" Digite a coordenada ya: "))

# Coordenadas de B (xb, yb):
xb = float(input(" Digite a coordenada xb: "))
yb = float(input(" Digite a coordenada yb: "))

# Distancia entre A e B (dab):
from math import sqrt
dab = sqrt ((xb - xa)** 2) + ((yb - ya)** 2)

print(round(dab,3))


-- OUTPUT:
549.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:13:21) 
-- CODE:
# Coordenadas de A (xa, ya):
xa = float(input(" Digite a coordenada xa: "))
ya = float(input(" Digite a coordenada ya: "))

# Coordenadas de B (xb, yb):
xb = float(input(" Digite a coordenada xb: "))
yb = float(input(" Digite a coordenada yb: "))

# Distancia entre A e B (dab):
from math import sqrt
dab = sqrt ((xb - xa)** 2) + ((yb - ya)** 2)

print(round(dab,3))


-- OUTPUT:
549.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 11:14:37) 
-- CODE:
# Coordenadas de A (xa, ya):
xa = float(input(" Digite a coordenada xa: "))
ya = float(input(" Digite a coordenada ya: "))

# Coordenadas de B (xb, yb):
xb = float(input(" Digite a coordenada xb: "))
yb = float(input(" Digite a coordenada yb: "))

# Distancia entre A e B (dab):
from math import sqrt
dab = sqrt ((xb - xa)** 2) + ((yb - ya)** 2)

print(dab)


-- EXECUTION TIME:
0.201989
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
Digite a coordenada xa:  Digite a coordenada ya:  Digite a coordenada xb:  Digite a coordenada yb: 549.0
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
Digite a coordenada xa:  Digite a coordenada ya:  Digite a coordenada xb:  Digite a coordenada yb: 3.94
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
Digite a coordenada xa:  Digite a coordenada ya:  Digite a coordenada xb:  Digite a coordenada yb: 7.148399999999999
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:14:39) 
-- CODE:
# Coordenadas de A (xa, ya):
xa = float(input(" Digite a coordenada xa: "))
ya = float(input(" Digite a coordenada ya: "))

# Coordenadas de B (xb, yb):
xb = float(input(" Digite a coordenada xb: "))
yb = float(input(" Digite a coordenada yb: "))

# Distancia entre A e B (dab):
from math import sqrt
dab = sqrt ((xb - xa)** 2) + ((yb - ya)** 2)

print(dab)


-- OUTPUT:
549.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:15:10) 
-- CODE:
# Coordenadas de A (xa, ya):
xa = float(input(" Digite a coordenada xa: "))
ya = float(input(" Digite a coordenada ya: "))

# Coordenadas de B (xb, yb):
xb = float(input(" Digite a coordenada xb: "))
yb = float(input(" Digite a coordenada yb: "))

# Distancia entre A e B (dab):
from math import sqrt
dab = sqrt ((xb - xa)** 2) + ((yb - ya)** 2)

print(round(dab,3))


-- OUTPUT:
549.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:15:51) 
-- CODE:
# Coordenadas de A (xa, ya):
xa = float(input(" Digite a coordenada xa: "))
ya = float(input(" Digite a coordenada ya: "))

# Coordenadas de B (xb, yb):
xb = float(input(" Digite a coordenada xb: "))
yb = float(input(" Digite a coordenada yb: "))

# Distancia entre A e B (d):
from math import sqrt
d = sqrt ((xb - xa)** 2) + ((yb - ya)** 2)

print(round(d,3))


-- OUTPUT:
549.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 11:16:41) 
-- CODE:
# Coordenadas de A (xa, ya):
xa = float(input(" Digite a coordenada xa: "))
ya = float(input(" Digite a coordenada ya: "))

# Coordenadas de B (xb, yb):
xb = float(input(" Digite a coordenada xb: "))
yb = float(input(" Digite a coordenada yb: "))

# Distancia entre A e B (d):
from math import sqrt
d = sqrt (xb - xa)** 2 + (yb - ya)** 2

print(round(d,3))


-- EXECUTION TIME:
0.158634
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1804/main.py", line 11, in <module>
    d = sqrt (xb - xa)** 2 + (yb - ya)** 2
ValueError: math domain error

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 11:16:43) 
-- CODE:
# Coordenadas de A (xa, ya):
xa = float(input(" Digite a coordenada xa: "))
ya = float(input(" Digite a coordenada ya: "))

# Coordenadas de B (xb, yb):
xb = float(input(" Digite a coordenada xb: "))
yb = float(input(" Digite a coordenada yb: "))

# Distancia entre A e B (d):
from math import sqrt
d = sqrt (xb - xa)** 2 + (yb - ya)** 2

print(round(d,3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    d = sqrt (xb - xa)** 2 + (yb - ya)** 2
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 11:17:11) 
-- CODE:
# Coordenadas de A (xa, ya):
xa = float(input(" Digite a coordenada xa: "))
ya = float(input(" Digite a coordenada ya: "))

# Coordenadas de B (xb, yb):
xb = float(input(" Digite a coordenada xb: "))
yb = float(input(" Digite a coordenada yb: "))

# Distancia entre A e B (d):
from math import sqrt
d = sqrt ((xb - xa)** 2 + (yb - ya)** 2)

print(round(d,3))


-- EXECUTION TIME:
0.251087
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.48
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 19:04:45) 
-- CODE:
# Coordenadas de A (xa, ya):
xa = float(input(" Digite a coordenada xa: "))
ya = float(input(" Digite a coordenada ya: "))

# Coordenadas de B (xb, yb):
xb = float(input(" Digite a coordenada xb: "))
yb = float(input(" Digite a coordenada yb: "))

# Distancia entre A e B (d):
from math import sqrt
d = sqrt ((xb - xa)** 2 + (yb - ya)** 2)

print(round(d,3))


-- EXECUTION TIME:
0.147675
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.48
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
